<resources>
    <string name="app_name">GitHub ApiApp</string>
    <string name="user_search_hint">Поиск пользователей на GitHub</string>
    <string name="user_details_id_title">ID:</string>
    <string name="user_details_created_at_title">Зарегистрирован:</string>
    <string name="user_details_public_repos_title">Публичные репозитории:</string>
    <string name="user_details_repos_header">Репозитории:</string>
    <string name="repository_language">Язык:</string>
    <string name="repository_details_url">URL:</string>
    <string name="empty_text" />
    <string name="response_is_empty">Нет результатов по данному запросу</string>
    <string name="activity_not_is_user_search_controller">Активити должна имплементировать UserSearchController</string>
    <string name="activity_not_is_user_details_controller">Активити должна имплементировать UserDetailsController</string>
</resources>